--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Style Tiles with CSS</title>
+    <title>Fantasy</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -12,7 +12,7 @@
     <div class="full-width header-wrapper">
       <header>
         <h1>Style Tile Template</h1>
-        <h2>Project name</h2>
+        <h2>Common intrest</h2>
         <h3>Style tile</h3>
         <h4>Version 1</h4>
       </header>
@@ -28,14 +28,7 @@
             <li class="color-swatch-3"></li>
             <li class="color-swatch-4"></li>
             <li class="color-swatch-5"></li>
-          </ul>
-        </section>
-        <section class="textures">
-          <h3 class="section-heading">Textures</h3>
-          <ul class="swatchgrid">
-            <li class="texture-swatch-1"></li>
-            <li class="texture-swatch-2"></li>
-            <li class="texture-swatch-3"></li>
+            <li class="color-swatch-6"></li>
           </ul>
         </section>
         <section class="buttons">
@@ -53,12 +46,12 @@
           <h3 class="section-heading">Typography</h3>
           <h1 class="h1-sample">A sample header</h1>
           <p class="font-details-h1">
-            <span class="font-name">Font Name</span>,
+            <span class="font-name">MedievalSharp</span>,
             <span class="font-color">#color value</span>
           </p>
           <h2 class="h2-sample">An example of a sub header</h2>
           <p class="font-details-h2">
-            <span class="font-name">Font Name</span>,
+            <span class="font-name">Bookmark</span>,
             <span class="font-color">#color value</span>
           </p>
           <p class="typography-sample">
@@ -70,7 +63,7 @@
             netus et malesuada fames ac turpis egestas.
           </p>
           <p class="font-details-p">
-            <span class="font-name">Font Name</span>,
+            <span class="font-name">Baskerville</span>,
             <span class="font-color">#color value</span>
           </p>
           <a href="#" class="typography-sample"
