--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="full-width header-wrapper">
       <header>
         <h1>Style Tile Template</h1>
-        <h2>Common intrest</h2>
+        <h2>Fantasy Generator</h2>
         <h3>Style tile</h3>
         <h4>Version 1</h4>
       </header>
@@ -28,7 +28,6 @@
             <li class="color-swatch-3"></li>
             <li class="color-swatch-4"></li>
             <li class="color-swatch-5"></li>
-            <li class="color-swatch-6"></li>
           </ul>
         </section>
         <section class="buttons">
@@ -47,12 +46,12 @@
           <h1 class="h1-sample">A sample header</h1>
           <p class="font-details-h1">
             <span class="font-name">MedievalSharp</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-color">#fff</span>
           </p>
           <h2 class="h2-sample">An example of a sub header</h2>
           <p class="font-details-h2">
             <span class="font-name">Bookmark</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-color">#fff</span>
           </p>
           <p class="typography-sample">
             This sample paragraph has <strong>strong parts</strong> and
@@ -64,14 +63,14 @@
           </p>
           <p class="font-details-p">
             <span class="font-name">Baskerville</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-color">#fff</span>
           </p>
           <a href="#" class="typography-sample"
             >This is an example of a text link.</a
           >
           <p class="font-details-a">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">MedievalSharp</span>,
+            <span class="font-color">#fff</span>
           </p>
         </section>
         <section class="adjectives">
